--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,19 +10,19 @@
         android:id="@+id/button_serviceOn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
+        android:layout_marginTop="36dp"
         android:text="On"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button_serviceOff"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_serviceOff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginBottom="225dp"
+        android:layout_marginTop="17dp"
         android:text="OFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_serviceOn" />
+        app:layout_constraintStart_toStartOf="@+id/button_serviceOn"
+        app:layout_constraintTop_toBottomOf="@+id/button_serviceOn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
